--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon Social media Services</title>
+    <title>Horiseon Social media Services Platform giving different services provided</title>
 </head>
 
 <body>
