div cleaned for header and footer

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -7,25 +7,23 @@
     <title>Horiseon Social media Services Platform giving different services provided</title>
 </head>
 
-<body>
-   <Heading> 
-        <div class="header">
-            <h1>Hori<span class="seo">seo</span>n</h1>
-            <div>
-                <ul>
-                    <li>
-                        <a href="#search-engine-optimization">Search Engine Optimization</a>
-                    </li>
-                    <li>
-                        <a href="#online-reputation-management">Online Reputation Management</a>
-                    </li>
-                    <li>
-                        <a href="#social-media-marketing">Social Media Marketing</a>
-                    </li>
-                </ul>
-            </div>
+<body>     
+    <header>
+        <h1>Hori<span class="seo">seo</span>n</h1>
+        <div>
+            <ul>
+                <li>
+                    <a href="#search-engine-optimization">Search Engine Optimization</a>
+                </li>
+                <li>
+                    <a href="#online-reputation-management">Online Reputation Management</a>
+                </li>
+                <li>
+                    <a href="#social-media-marketing">Social Media Marketing</a>
+                </li>
+            </ul>
         </div>
-   </Heading>
+    </header>
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
@@ -73,12 +71,12 @@
             </p>
         </div>
     </div>
-    <div class="footer">
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2023 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
